bump spring boot and refactor to novari namespace